--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ dependencies {
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:21.0'
+    
+    compile group: 'javax.persistence', name: 'persistence-api', version: '1.0'
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
