--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     implementation 'com.google.guava:guava:21.0'
     
     compile group: 'javax.persistence', name: 'persistence-api', version: '1.0'
+    
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
