--- a/build.gradle
+++ b/build.gradle
@@ -24,9 +24,10 @@ dependencies {
     implementation 'com.google.guava:guava:21.0'
     
     compile group: 'javax.persistence', name: 'persistence-api', version: '1.0'
-    
+    compile group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.3.2' 
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
-
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.2.4' 
+    compile group: 'org.json', name: 'json', version: '20170516'
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
 }
